--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,3 +1,5 @@
 /* components.css */
 @import "./components/buttons.css";
 @import "./components/inputs.css";
+@import "./components/modals.css";
+@import "./components/paper.css";
