--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,5 +1,5 @@
 /* components.css */
-@import "./components/buttons.css";
-@import "./components/inputs.css";
-@import "./components/modals.css";
+@import "./components/button.css";
+@import "./components/input.css";
+@import "./components/modal.css";
 @import "./components/paper.css";
