--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -3,3 +3,4 @@
 @import "./components/input.css";
 @import "./components/modal.css";
 @import "./components/paper.css";
+@import "./components/confirmation-modal.css";
