feat: add icon button

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,3 +4,4 @@
 @import "./components/modal.css";
 @import "./components/paper.css";
 @import "./components/confirmation-modal.css";
+@import "./components/icon-button.css";
