update: refactor class component to functional components

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -5,3 +5,4 @@
 @import "./components/paper.css";
 @import "./components/confirmation-modal.css";
 @import "./components/icon-button.css";
+@import "./pages/login.css";
